--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           cache-read-only: false
 
       - name: Execute Gradle build
-        run: ./gradlew shadowJar
+        run: ./gradlew build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
