fix: make /keepinv available by default

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ api-version: '1.18'
 permissions:
   togglekeepinv.command:
     description: "Allows the ability to run /keepinv."
-    default: false
+    default: true
 
 commands:
   keepinv:
